feat(home/eww): battery widget

--- a/home/eww/eww.scss
+++ b/home/eww/eww.scss
@@ -65,6 +65,14 @@ tooltip {
     font-family: Symbols Nerd Font;
 }
 
+.red {
+    color: $red;
+}
+
+.green {
+    color: $green;
+}
+
 .tray {
     padding: 0;
     
