feat(home/…): s/iosevka/atkinson hyperlegible next

--- a/home/eww/eww.scss
+++ b/home/eww/eww.scss
@@ -21,7 +21,7 @@ $purple:       #b294bb;
     background: none;
     
     font-size: 14pt;
-    font-family: Iosevka Aile;
+    font-family: Atkinson Hyperlegible Next;
 }
 
 // System tray menus get "popup" by default.
